revision structure of project

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,5 +9,15 @@ body{
     font-weight: bold;
 }
 
+.container a {
+    color: #D87053;
+    text-decoration: none;
+}
+
+.container a:hover {
+    color: #C35E45;
+}
+
+
 
 
