small changes, design index, search function

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,15 @@ body{
     color: #C35E45;
 }
 
+.container p{
+    color: #D87053;
+}
+
+.container h3{
+    color: #D87053;
+    font-family: "Book Antiqua", serif;
+}
+
 
 
 
